--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="col-md-12">
           <div class="ls-sec-2-inr">
             <div class="ls-sec-2-top-des">
-              <p>But before we finalize your shipment, you'll want to activate your 30 Days <strong>FREE CellXRenewal<sup>™</sup> <br>Platinum Pass. Customize Your Order</strong></p>
+              <p>But before we finalize your shipment, you'll want to activate your 30 Days <strong>FREE CellXRenewal<sup>™</sup> <br>Platinum Pass.</strong></p>
             </div>
             <div class="ls-sec-2-img">
               <img class="lazy" data-src="assets/images/ls-sec-2-img-001.png">
@@ -140,7 +140,7 @@
         <div class="row">
           <div class="col-md-12">
             <div class="ln-sec-one-hedding-inr">
-              <h2 class="ln-sec-one-sub-title text-white">You Must Keep Going Strong</h2>
+              <h2 class="ln-sec-one-sub-title text-white">You must persevere</h2>
             </div>
           </div>
         </div>
@@ -171,7 +171,7 @@
               <h3>01.</h3>
             </div>
             <h3 class="text-green">A Lifetime Price freeze for<br> CellXRenewal<sup>™</sup> at $39 per bottle</h3>
-            <p>That means when we raise the price back to its RRP of $149 per bottle you will still be able to use your Platinum Pass to purchase at this special<br> one-time-only price.</p>
+            <p>That means when we raise the price back to its RRP of $149 per bottle you will still be able to use your Platinum Pass to purchase at the prices you have already paidtoday.</p>
             <p>Meaning you get to get more done more physically, personally, and professionally at a rock bottom<br> price.</p>
             <p>You can also use your Platinum Pass for your family and friends too.</p>
           </div>
@@ -215,9 +215,9 @@
             <div class="entry-nmbr inline-bg lazy text-white" style="background: url('assets/images/entry-nmbr-bg.png');">
               <h3>03.</h3>
             </div>
-            <h3 class="text-green">Discover top Anti-Aging tips, tricks and hacks only found in the Life Titan Insider Premium Newsletter.</h3>
+            <h3 class="text-green">Discover top Anti-Aging tips, tricks and hacks even more found in the Life Titan Insider Premium Newsletter</h3>
             <h6 class="text-green">(Lifetime Subscription: <span>$1,995 Value</span>)</h6>
-            <p>What’s happening right now in the nation’s healthcare sector is exactly why I created a special lifetime subscription of our Life Titan Insider Newsletter.</p>
+            <p>What’s happening right now in the nation’s healthcare sector is exactly why I created a special lifetime subscription of our <strong>Life Titan Insider Newsletter.</strong></p>
              <p>Once you become a CellXRenewal<sup>™</sup> Platinum Pass Member you’ll  know that your subscription will last forever... that there will be no nasty surprises when your health is on the line and you need to turn to<br> this information the most.</p>
           </div>
         </div>
@@ -227,7 +227,7 @@
           <div class="clu-text-modiule ln-sec-one-desc">
             <p>I’d normally charge $1,995 for a lifetime subscription...</p>
             <p>But when you accept my offer today, it’s absolutely FREE!</p>
-            <p>That means you’ll pay NOTHING  for a lifetime of Life Titan Insider.</p>
+            <p>That means you’ll pay NOTHING  for a lifetime of <strong>Life Titan Insider.</strong></p>
             <p>Discover how to protect your health during these uncertain times and the latest in little-known health breakthroughs.  We dig deep in the latest scientific research to share with you news like this:</p>
           </div>
         </div>
@@ -319,7 +319,7 @@
         <div class="col-md-12">
           <div class="clu-text-modiule">
             <p><strong>Here’s what to do next:</strong></p>
-            <p>Simply click the <strong>"Yes! Count Me In!"</strong> button and your Platinum Pass w<strong>ill</strong> be activated straight away.</p>
+            <p>Simply check the box below and click the<strong>"Yes! Count Me In!"</strong> button and your Platinum Pass w<strong>ill</strong> be activated straight away.</p>
           </div>
           <div class="ln-sec-five-hding lazy inline-bg" style="background: url('assets/images/ln-sec5-hdr-bg.jpg');">
             <strong><a href="#">YES! COUNT ME IN!</a></strong>
