--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 
 
   <section class="fl-page-bnr inline-bg lazy plr-10" data-src="assets/images/page-bnr.jpg">
+    <span class="bnr-overlay-xs"></span>
     <div class="container">
       <div class="row">
         <div class="col-md-12">
