--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="ls-sec-1-des">
               <p>CellXRenewal is the most exciting innovation in anti-aging today helping thousands of folks over 50 slow down Father Time. </p>
               <p>I'm thrilled that you have just taken your first step!</p>
-              <p>I can’t wait to hear how <strong>CellXRenewal<sup>™</sup></strong> helps <br>you to nourish your cells, upgrade your energy levels, support mitochondrial fitness and cell energy, boost productivity, fuel long-term <br>health, and provide support for handling stress.</p>
+              <p>I can’t wait to hear how <strong>CellXRenewal<sup>™</sup></strong> helps <br>you to nourish your cells, upgrade your energy levels, support mitochondrial fitness and cell energy, boost productivity, fuel long-term <br>health, and provide support for handling stress.<sup>[1]</sup></p>
             </div>
           </div>
         </div>
@@ -106,6 +106,7 @@
               <img class="lazy" data-src="assets/images/ls-sec-2-img-001.png">
             </div>
             <div class="ls-sec-2-btm-des">
+              <p>[2]</p>
               <p><strong>You see, the secret to getting astounding results for yourself requires only two things.</strong></p>
             </div>
           </div>
@@ -141,7 +142,7 @@
         <div class="row">
           <div class="col-md-12">
             <div class="ln-sec-one-hedding-inr">
-              <h2 class="ln-sec-one-sub-title text-white">You must persevere</h2>
+              <h2 class="ln-sec-one-sub-title text-white">You Must Keep Going Strong</h2>
             </div>
           </div>
         </div>
@@ -172,7 +173,7 @@
               <h3>01.</h3>
             </div>
             <h3 class="text-green">A Lifetime Price freeze for<br> CellXRenewal<sup>™</sup> at $39 per bottle</h3>
-            <p>That means when we raise the price back to its RRP of $149 per bottle you will still be able to use your Platinum Pass to purchase at the prices you have already paidtoday.</p>
+            <p>That means when we raise the price back to its RRP of $149 per bottle you will still be able to use your Platinum Pass to purchase at this special <br>one-time-only price.</p>
             <p>Meaning you get to get more done more physically, personally, and professionally at a rock bottom<br> price.</p>
             <p>You can also use your Platinum Pass for your family and friends too.</p>
           </div>
@@ -216,7 +217,7 @@
             <div class="entry-nmbr inline-bg lazy text-white" style="background: url('assets/images/entry-nmbr-bg.png');">
               <h3>03.</h3>
             </div>
-            <h3 class="text-green">Discover top Anti-Aging tips, tricks and hacks even more found in the Life Titan Insider Premium Newsletter</h3>
+            <h3 class="text-green">Discover top Anti-Aging tips, tricks and hacks only found in the Life Titan Insider Premium Newsletter.</h3>
             <h6 class="text-green">(Lifetime Subscription: <span>$1,995 Value</span>)</h6>
             <p>What’s happening right now in the nation’s healthcare sector is exactly why I created a special lifetime subscription of our <strong>Life Titan Insider Newsletter.</strong></p>
              <p>Once you become a CellXRenewal<sup>™</sup> Platinum Pass Member you’ll  know that your subscription will last forever... that there will be no nasty surprises when your health is on the line and you need to turn to<br> this information the most.</p>
@@ -320,7 +321,7 @@
         <div class="col-md-12">
           <div class="clu-text-modiule">
             <p><strong>Here’s what to do next:</strong></p>
-            <p>Simply check the box below and click the<strong>"Yes! Count Me In!"</strong> button and your Platinum Pass w<strong>ill</strong> be activated straight away.</p>
+            <p>Simply click the <strong>"Yes! Count Me In!"</strong> button and your Platinum Pass w<strong>ill</strong> be activated straight away.</p>
           </div>
           <div class="ln-sec-five-hding lazy inline-bg" style="background: url('assets/images/ln-sec5-hdr-bg.jpg');">
             <strong><a href="#">YES! COUNT ME IN!</a></strong>
