--- a/index.html
+++ b/index.html
@@ -106,8 +106,7 @@
               <img class="lazy" data-src="assets/images/ls-sec-2-img-001.png">
             </div>
             <div class="ls-sec-2-btm-des">
-              <p>[2]</p>
-              <p><strong>You see, the secret to getting astounding results for yourself requires only two things.</strong></p>
+              <p><strong>You see, the secret to getting astounding results for yourself requires only two things.<sup>[2]</sup></strong></p>
             </div>
           </div>
         </div>
